--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,20 @@
 <h2> My Heroes </h2>
 <ul class="heroes">
     <li *ngFor="let hero of heroes">
-        <button type="button">
+        <!-- () around click tells Angular to listen for the button element's click event -->
+        <!-- When the current row hero is the same as the selectedHero, Angular adds the selected CSS class -->
+        <button [class.selected]="hero === selectedHero"  type="button" (click)="onSelect(hero)">
             <span class="badge">{{hero.id}}</span>
             <span class="name">{{hero.name}}</span>
         </button>
-    </li>
+    </li>    
 </ul>
+
+<div *ngIf="selectedHero">
+    <h2>{{selectedHero.name | uppercase}} Details</h2>
+    <div>id: {{selectedHero.id}}</div>
+    <div>
+        <label for="hero-name">Hero name: </label>
+        <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
+    </div>
+</div>
