--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<!-- The <router-outlet> tells the router where to display routed views -->
+<router-outlet></router-outlet>
 <app-messages></app-messages>
